--- a/layouts/_shortcodes/katex.html
+++ b/layouts/_shortcodes/katex.html
@@ -1,21 +1,17 @@
+{{- if .Inner -}}
+  {{- if .Get "display" -}}
+  <div>{{ printf "\\[ %s \\]" .Inner }}</div>
+  {{- else -}}
+  <span>{{ printf "\\( %s \\)" .Inner }}</span>
+  {{- end -}}
+{{- end -}}
 {{- if not (.Page.Store.Get "katex") -}}
-  <!-- Include katex only first time -->
-  {{- /* remove whitespaces */ -}}
+  {{- /* Include katex only first time */ -}}
   <link rel="stylesheet" href="{{ "katex/katex.min.css" | relURL }}" />
   {{- /* remove whitespaces */ -}}
   <script defer src="{{ "katex/katex.min.js" | relURL }}"></script>
-  {{- with resources.Get "katex.json" -}}
-  <script defer src="{{ "katex/auto-render.min.js" | relURL }}" onload="renderMathInElement(document.body, {{ . | minify }});"></script>
+  {{- with resources.Get "katex.json" | minify -}}
+    <script defer src="{{ "katex/auto-render.min.js" | relURL }}" onload="renderMathInElement(document.body, {{ .Content | safeJS }});"></script>
   {{- end -}}
   {{- .Page.Store.Set "katex" true -}}
-{{- end -}}
-
-{{- if .Inner -}}
-<span>
-  {{- if .Get "display" -}}
-  \[ {{ .Inner }} \]
-  {{- else -}}
-  \( {{ .Inner }} \)
-  {{- end -}}
-</span>
 {{- end -}}
