--- a/layouts/_shortcodes/mermaid.html
+++ b/layouts/_shortcodes/mermaid.html
@@ -1,14 +1,11 @@
+{{- /* remove whitespaces */ -}}
+<pre class="mermaid{{ with .Get "class" }} {{ . }}{{ end }}">
+  {{- .Inner | htmlEscape | safeHTML -}}
+</pre>
 {{- if not (.Page.Store.Get "mermaid") -}}
-  <!-- Include mermaid only first time -->
-  {{- /* remove whitespaces */ -}}
-  <script src="{{ "mermaid.min.js" | relURL }}"></script>
-  {{- with resources.Get "mermaid.json" -}}
-    <script>mermaid.initialize({{ .Content | safeJS }})</script>
+  {{- /* Include mermaid only first time */ -}}
+  {{- with resources.Get "mermaid.json" | minify -}}
+  <script src="{{ "mermaid.min.js" | relURL }}" onload="mermaid.initialize({{ .Content | safeJS }})"></script>
   {{- end -}}
   {{- .Page.Store.Set "mermaid" true -}}
 {{- end -}}
-
-<pre class="mermaid{{ with .Get "class" }} {{ . }}{{ end }}">
-{{- .Inner | htmlEscape | safeHTML  -}}
-</pre>
-{{- /* remove whitespaces */ -}}
