--- a/layouts/_partials/docs/links/portable-link.html
+++ b/layouts/_partials/docs/links/portable-link.html
@@ -16,7 +16,13 @@
   {{- else with (resources.Get $path) -}}
     {{- $destination = .RelPermalink -}}
   {{- else -}}
-    {{- warnf "Reference '%s' not found in '%s'" .Destination .Page.RelPermalink -}}
+    {{- $mode := .Page.Site.Params.BookPortableLinks -}}
+    {{- $message := printf "Image reference '%s' not found in '%s'" .Destination .Page.RelPermalink -}}
+    {{- if eq $mode "warning" -}}
+    {{- warnf $message -}}
+    {{- else if eq $mode "error" -}}
+    {{- errorf $message -}}
+    {{- end -}}
   {{- end -}}
 
   {{- with $url.RawQuery -}}
