Rollback global display flex for menu links as it doesn't work well with ToC code tag

--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -58,7 +58,7 @@ nav ul {
 
   a {
     padding: .5em 0;
-    display: flex;
+    display: block;
   }
 
   a[href]:hover, a[role=button]:hover {
@@ -119,6 +119,7 @@ a .book-icon {
   a, label {
     color: inherit;
     word-wrap: break-word;
+    display: flex;
   }
 
   a.active {
