--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -11,7 +11,7 @@
     {{ template "menu-container" . }} <!-- Left menu -->
 
     <div class="book-page">
-      <header class="book-header">
+      <header class="book-header hidden">
         {{ template "header" . }} <!-- Mobile layout header -->
       </header>
 
