Add standard spacing to asciinema shortcode

--- a/assets/_shortcodes.scss
+++ b/assets/_shortcodes.scss
@@ -227,6 +227,11 @@
     }
   }
 
+  // {{< asciinema >}}
+  .book-asciinema {
+    margin: $padding-16 0;
+  }
+
   .book-hero {
     min-height: $padding-16 * 24;
     align-content: center;
