Change logic on rendering or not ToC

--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -399,7 +399,7 @@ body[dir="rtl"] .book-menu {
 
     .book-menu-overlay {
       display: block;
-      position: absolute;
+      position: fixed;
       top: 0;
       bottom: 0;
       left: 0;
