Refactor condition for Table of Contents display
Fix `bookToC` not responding to `true` or `false` globally (Hugo config) or locally (front matter) by simplifying the logic and making TOC behaviour consistent across all page types.

--- a/layouts/_partials/docs/toc-show.html
+++ b/layouts/_partials/docs/toc-show.html
@@ -1,5 +1,5 @@
-{{- return or
-  (and (eq .Type "posts") (eq .Kind "section"))
+{{- return and
+  (not (eq .Params.bookToC false))
+  (not (eq .Site.Params.BookToC false))
   (not (eq .TableOfContents "<nav id=\"TableOfContents\"></nav>"))
-  (default .Site.Params.BookToC .Params.BookToC)
 -}}
