Initial implementation of the "Print book" feature. (#764)

--- a/layouts/_partials/docs/menu.html
+++ b/layouts/_partials/docs/menu.html
@@ -4,6 +4,7 @@
 {{ if hugo.IsMultilingual }}
   {{ partial "docs/languages" . }}
 {{ end }}
+{{ partial "docs/print" . }}
 
 {{ partial "docs/inject/menu-before" . }}
 {{ partial "docs/menu-hugo" (dict "Page" .Page "Menu" .Site.Menus.before) }}
