--- a/layouts/_partials/docs/print.html
+++ b/layouts/_partials/docs/print.html
@@ -1,3 +1,3 @@
-<a role="button">
-{{ partial "docs/text/i18n" "Print this book" }}"
+<a href="{{ .RelPermalink }}/print.html" role="button">
+{{ partial "docs/text/i18n" "Print this book" }}
 </a>
